updated github link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container">
           <div class="button-container">
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/birju-kumar-07763b136/" rel="tooltip" title="Follow me on Linkedin"><i class="fa fa-linkedin"></i></a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/crazyvibes" rel="tooltip" title="Follow me on Github"><i class="fa fa-github"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/birju-kumar" rel="tooltip" title="Follow me on Github"><i class="fa fa-github"></i></a>
         </div> 
         </div>
       </div>
